# Real-Estate-Conversion-System-Agent

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
agentic_lead_engine/: __init__.py
agentic_lead_engine/agents/: conversion_agent_v2.py
agentic_lead_engine/api/: mobile_crm.py  mobile_crm_server.py
agentic_lead_engine/config/: settings.py
agentic_lead_engine/integration/: integration_manager.py  payment_processor.py
agentic_lead_engine/orchestrator/: orchestrator.py
agentic_lead_engine/utils/: csv_memory.py  logger.py  ollama_client.py  whatsapp_sender.py
docs/: demo_flow.html  launch_kit.md  opengraph_preview.html  system_architecture.html
